--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
+    "nodemailer": "^7.0.11",
     "zod": "^4.2.0"
   },
   "devDependencies": {
@@ -18,6 +19,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^25.0.2",
+    "@types/nodemailer": "^7.0.4",
     "nodemon": "^3.1.11",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
