--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "lucide-react": "^0.561.0",
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.561.0",
     "next": "16.0.10",
-    "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
